@@ -1,0 +1,6 @@
+package ORTestTransfer;
+use Moo;
+
+has value => (is => 'rw');
+
+1;
