@@ -1,2 +1,4 @@
+  - allow transfer of scalar references
+
 0.001001 - 2012-07-12
   - initial release
